@@ -1,5 +1,5 @@
 <html>
 <body>
-The integration layer between Spring Web Flow the Spring MVC framework.
+The integration layer between Spring Web Flow the Spring (Portlet) MVC framework.
 </body>
 </html>
